[package]
name = "jeep"
version = "0.0.2"
edition = "2021"
authors = [
    "Michael de Gans <michael.john.degans@gmail.com>",
]
description = "CAN event handling for Jeep JL"
documentation = "https://docs.rs/jeep"
repository = "https://github.com/mdegans/jeep/"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "socketcan", "jeep", "CAN"]
categories = [
    "embedded",
    "parsing",
    "hardware-support"
]
maintenance = { status = "experimental" }


[[example]]
name = "jeep-listen"
path = "examples/listen.rs"
required-features = ["examples"]
test = true

[[example]]
name = "jeep-converter"
path = "examples/converter.rs"
required-features = ["examples"]
test = true

[[example]]
name = "jeep-alarm"
path = "examples/alarm.rs"
required-features = ["examples"]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
bitflags = "1.3.2"
libc = "0.2"
static_assertions = "1.1.0"
chrono = { version = "0.4.23" }

serde = { version = "1", features = ["derive"], optional = true }
serde-hex = { version = "0.1.0", optional = true }
serde_json = { version = "1.0", optional = true }

socketcan = { git = "https://github.com/mdegans/socketcan-rs.git", rev = "6941caafb12dcb272dc78c1697c16de4155bc8a2", optional = true }
embedded-can = { version = "0.4.1", optional = true }

clap = { version = "4.0.23", features = ["derive"], optional = true }
clap-num = { version = "1.0.2", optional = true }
ctrlc = { version = "3.2.4", optional = true }

[features]
default = []
examples = ["dep:clap", "dep:clap-num", "dep:ctrlc", "socketcan", "serde"]
serde = ["dep:serde", "dep:serde_json", "chrono/serde"]
embedded-can = ["dep:embedded-can"]
socketcan = ["dep:socketcan"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[package.metadata.docs.rs]
all-features = true
